Adição de explicação do List Comprehension

--- a/Transpose_e_List_Comprehension.ipynb
+++ b/Transpose_e_List_Comprehension.ipynb
@@ -32,13 +32,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "fa129866-ca7c-4bbc-bc69-4243b86063cb"
+        "outputId": "5b7c958a-fcea-436d-e85d-5f410e0911e6"
       },
       "source": [
         "matrix = [[1,2],[3,4],[5,6],[7,8]]\n",
         "for i in matrix: print(i)"
       ],
-      "execution_count": 54,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "8d80038e-45be-4a16-e3d0-c6f05de9864a"
+        "outputId": "b983910e-9590-4d17-caa7-eef0170d156a"
       },
       "source": [
         "transp = []\n",
@@ -83,7 +83,7 @@
         "  transp.append(l)\n",
         "for i in transp: print(i)"
       ],
-      "execution_count": 55,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "d3081231-c0d6-466c-d8cb-de0df3011afd"
+        "outputId": "b824d35a-2e93-4d47-e01d-bbef232e9549"
       },
       "source": [
         "transp = []\n",
@@ -124,7 +124,7 @@
         "  transp.append(l)\n",
         "for i in transp: print(i)"
       ],
-      "execution_count": 56,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,6 +135,25 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gpIjrDfpfEP9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# O List Comprehension converte este código:\n",
+        "l = []\n",
+        "for linha in matrix:\n",
+        "  l.append(linha[x])\n",
+        "\n",
+        "# Neste mais compacto:\n",
+        "l = [linha[x] for linha in matrix]"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -151,7 +170,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "e1971569-a5cc-4ce0-8b47-bfd62d522f63",
+        "outputId": "e1da1388-4d32-482d-ce3f-023776df7ff3",
         "id": "aacq_CY9SK_x",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -163,7 +182,7 @@
         "transp = [[linha[x] for linha in matrix] for x in range(len(matrix[0]))]\n",
         "for i in transp: print(i)"
       ],
-      "execution_count": 57,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
