--- a/Matriz_Transposta_com_List_Comprehension.ipynb
+++ b/Matriz_Transposta_com_List_Comprehension.ipynb
@@ -3,21 +3,34 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Matriz Transposta com List Comprehension.ipynb",
+      "name": "Matriz_Transposta_com_List_Comprehension.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.7"
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XvDtOPXmNSgU",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "XvDtOPXmNSgU"
       },
       "source": [
         "### **Matriz original**"
@@ -26,19 +39,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EaUGQKmYuZVE",
         "colab_type": "code",
+        "id": "EaUGQKmYuZVE",
+        "outputId": "f36421aa-df22-48ec-fed2-c9edbaaec75c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "5b7c958a-fcea-436d-e85d-5f410e0911e6"
+        }
       },
       "source": [
         "matrix = [[1,2],[3,4],[5,6],[7,8]]\n",
         "for i in matrix: print(i)"
       ],
-      "execution_count": 59,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,8 +68,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CMDuJfnCNfi_",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "CMDuJfnCNfi_"
       },
       "source": [
         "---\n",
@@ -66,13 +79,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JQ1bCN99Dv3i",
         "colab_type": "code",
+        "id": "JQ1bCN99Dv3i",
+        "outputId": "cb1aa12f-e3ce-4a73-c551-2fc49cbd3e40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "b983910e-9590-4d17-caa7-eef0170d156a"
+        }
       },
       "source": [
         "transp = []\n",
@@ -83,7 +96,7 @@
         "  transp.append(l)\n",
         "for i in transp: print(i)"
       ],
-      "execution_count": 60,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,8 +111,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "b240O1JzN34q",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "b240O1JzN34q"
       },
       "source": [
         "---\n",
@@ -109,13 +122,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XUhhGbFPHSwl",
         "colab_type": "code",
+        "id": "XUhhGbFPHSwl",
+        "outputId": "ce05db9d-28e5-4e36-df3a-038d5de005fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "b824d35a-2e93-4d47-e01d-bbef232e9549"
+        }
       },
       "source": [
         "transp = []\n",
@@ -124,7 +137,7 @@
         "  transp.append(l)\n",
         "for i in transp: print(i)"
       ],
-      "execution_count": 61,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,8 +152,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gpIjrDfpfEP9",
         "colab_type": "code",
+        "id": "gpIjrDfpfEP9",
         "colab": {}
       },
       "source": [
@@ -170,8 +183,8 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "e1da1388-4d32-482d-ce3f-023776df7ff3",
         "id": "aacq_CY9SK_x",
+        "outputId": "37725da9-b74b-45aa-c6c6-cbe283e744c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -182,7 +195,7 @@
         "transp = [[linha[x] for linha in matrix] for x in range(len(matrix[0]))]\n",
         "for i in transp: print(i)"
       ],
-      "execution_count": 62,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,12 +210,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xT9YpVrZQh3L",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "xT9YpVrZQh3L"
       },
       "source": [
         "---\n",
-        "**Outros exemplos de gerar uma Matriz Transposta:** https://www.geeksforgeeks.org/transpose-matrix-single-line-python/\n"
+        "**Outras formas de gerar uma Matriz Transposta:** https://www.geeksforgeeks.org/transpose-matrix-single-line-python/\n"
       ]
     }
   ]
