--- a/Notes/RegEx.ipynb
+++ b/Notes/RegEx.ipynb
@@ -31,11 +31,11 @@
       "metadata": {
         "id": "XXmTshT9TnWr",
         "colab_type": "code",
+        "outputId": "0ffc98c1-7c4f-4995-866c-963055cd40cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "8ad2254b-64bf-44f5-e97b-128de2c25f59"
+        }
       },
       "source": [
         "s = '-112.265654928602,36.09447672602546,2357\\\n",
@@ -57,7 +57,7 @@
         "x = re.findall(regex, s)\n",
         "x"
       ],
-      "execution_count": 51,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,7 +79,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 74
         }
       ]
     },
@@ -88,17 +88,17 @@
       "metadata": {
         "id": "JYNSo0SxX1-u",
         "colab_type": "code",
+        "outputId": "881af11f-2818-44d4-a790-abf103c89fd3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "0071fcfb-3f00-496c-efdc-78f4debaf622"
+        }
       },
       "source": [
-        "for (lat, long, heig) in x:\n",
-        "    print(f'{lat},{long},{heig}')"
+        "for (long, lat, heig) in x:\n",
+        "    print(f'{long},{lat},{heig}')"
       ],
-      "execution_count": 53,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
