--- a/Notes/Pyplot_Basics.ipynb
+++ b/Notes/Pyplot_Basics.ipynb
@@ -30,19 +30,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "61NnsjmalvEZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.close()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "oydDk_6T9j-A",
         "colab_type": "code",
         "colab": {}
@@ -60,17 +47,17 @@
       "metadata": {
         "id": "HBIM9sXNAvfr",
         "colab_type": "code",
+        "outputId": "8dce7056-f43a-4027-ac4e-60d0ce8c2ea3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        },
-        "outputId": "89c85069-5df7-41c3-a1c2-b0ff88f6d83f"
+        }
       },
       "source": [
         "plt.plot(x,y1)\n",
         "plt.show()"
       ],
-      "execution_count": 179,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -91,7 +78,7 @@
       "metadata": {
         "id": "SUL85eD1C07k",
         "colab_type": "code",
-        "outputId": "e5982744-fcef-4d6c-dd62-b9b2749119b3",
+        "outputId": "521ddf98-d5e5-4f24-9f0d-1cfc0d29566d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
@@ -103,7 +90,7 @@
         "plt.plot(x,y2)\n",
         "plt.show()"
       ],
-      "execution_count": 180,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -127,7 +114,7 @@
       },
       "source": [
         "---\n",
-        "[**Configurando uma linha**](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html)"
+        "### [**Configurando uma linha**](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html)"
       ]
     },
     {
@@ -135,7 +122,7 @@
       "metadata": {
         "id": "SxeUOoSXJqkH",
         "colab_type": "code",
-        "outputId": "2cf69700-f6cc-4bcc-87e3-0ba226035a71",
+        "outputId": "6304e508-60f4-4f3f-bf54-cd3371045297",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
@@ -150,7 +137,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 181,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -174,7 +161,7 @@
       },
       "source": [
         "---\n",
-        "**Título e rótulo dos eixos**\n"
+        "### **Título e rótulo dos eixos**\n"
       ]
     },
     {
@@ -182,7 +169,7 @@
       "metadata": {
         "id": "vTuoPcJnJ6e6",
         "colab_type": "code",
-        "outputId": "ba93ac98-dcc9-45d1-c23a-7f7ce40cbe09",
+        "outputId": "02dfd70f-505d-4be3-9309-95ccdfb392d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
@@ -198,7 +185,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 182,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -222,7 +209,7 @@
       },
       "source": [
         "---\n",
-        "[**Legenda**](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.legend.html)"
+        "### [**Legenda**](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.legend.html)"
       ]
     },
     {
@@ -230,7 +217,7 @@
       "metadata": {
         "id": "7y_WNBGoPY90",
         "colab_type": "code",
-        "outputId": "ce0088bf-0142-45bd-d97b-4aacde6b1ad0",
+        "outputId": "f1ca2525-edc0-46ba-f160-608dd14a1862",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
@@ -250,7 +237,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 183,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -274,7 +261,7 @@
       },
       "source": [
         "---\n",
-        "**Texto**"
+        "### **Texto**"
       ]
     },
     {
@@ -282,7 +269,7 @@
       "metadata": {
         "id": "9VIQMtPaVXVc",
         "colab_type": "code",
-        "outputId": "f624b4aa-9813-47f5-e73f-7078874c1fc7",
+        "outputId": "196fa68d-422b-4586-f302-42532688f88a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
@@ -305,7 +292,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 184,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -329,7 +316,7 @@
       },
       "source": [
         "---\n",
-        "**Tamanho da fonte**"
+        "### **Tamanho da fonte**"
       ]
     },
     {
@@ -337,7 +324,7 @@
       "metadata": {
         "id": "dIe157mXWA6i",
         "colab_type": "code",
-        "outputId": "37e90d8d-7e46-49e0-e76f-ff9a70d1cd40",
+        "outputId": "2e1b55dc-8c5c-4f2d-913b-9e89793557de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 495
@@ -356,7 +343,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 185,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,7 +367,7 @@
       },
       "source": [
         "---\n",
-        "**Estilos pré-definidos**"
+        "### **Estilos pré-definidos**"
       ]
     },
     {
@@ -388,17 +375,17 @@
       "metadata": {
         "id": "KBMigoCum1B4",
         "colab_type": "code",
+        "outputId": "fb8f1d8e-05a6-4139-88d5-26b2b4cbb928",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 459
-        },
-        "outputId": "5b04c3f7-6704-44c1-e3bf-035a5ed7d0da"
+        }
       },
       "source": [
         "# Lista de estilos\n",
         "plt.style.available"
       ],
-      "execution_count": 195,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +422,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 195
+          "execution_count": 226
         }
       ]
     },
@@ -444,7 +431,7 @@
       "metadata": {
         "id": "K1vzaveDZlnz",
         "colab_type": "code",
-        "outputId": "04baf82f-c65c-4502-e618-e70e85834b84",
+        "outputId": "49f83d9e-74a7-4f2a-c611-f33c107d9be5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -458,7 +445,7 @@
         "plt.style.use('seaborn')\n",
         "plt.show()"
       ],
-      "execution_count": 189,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -479,11 +466,11 @@
       "metadata": {
         "id": "r2PfLENigs4u",
         "colab_type": "code",
+        "outputId": "051bd63d-4919-4c94-b9e4-57dfa93cc496",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        },
-        "outputId": "2d918bef-15c4-45df-a544-2e25132b062f"
+        }
       },
       "source": [
         "# Voltando ao normal\n",
@@ -493,7 +480,7 @@
         "plt.style.use('default')\n",
         "plt.show()"
       ],
-      "execution_count": 191,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
