--- a/Notebooks/Nested_Dictionaries.ipynb
+++ b/Notebooks/Nested_Dictionaries.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "A3Z2dEVnb7al",
         "colab_type": "code",
-        "outputId": "0431bba4-c0b7-4915-cdcd-48d35fe08d47",
+        "outputId": "8d5f1f0b-6ca9-4850-bb7a-dd15dbc84373",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -54,7 +54,7 @@
       "source": [
         "dict"
       ],
-      "execution_count": 0,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -69,7 +69,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 88
+          "execution_count": 189
         }
       ]
     },
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "OnNpCzB9aDcj",
         "colab_type": "code",
-        "outputId": "becfc112-0baa-4eac-f486-87d3927ccd52",
+        "outputId": "c5859134-d91d-4c22-ba12-4499b8c6eb28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -88,7 +88,7 @@
         "for i in dict.items():\n",
         "  print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 190,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "WsRyBnw-aYUr",
         "colab_type": "code",
-        "outputId": "fd6029d5-a79f-4510-9420-88ddd1b401df",
+        "outputId": "45589adc-6842-48bd-94d8-ac31e9709bae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -117,7 +117,7 @@
         "for i in dict.keys():\n",
         "  print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "T7PAEKpPa4H3",
         "colab_type": "code",
-        "outputId": "ee04b7f9-211c-4bd9-b13a-c6abaddf3691",
+        "outputId": "03e04705-6261-42a8-9625-02584f3ff0bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -146,7 +146,7 @@
         "for i in dict.values():\n",
         "  print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "J3fnGkbNcB-G",
         "colab_type": "code",
-        "outputId": "14d86598-aadf-40e1-8a67-2c5026d2f644",
+        "outputId": "f65f5543-9ee6-47c0-af11-9fbb0514a24d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -185,7 +185,7 @@
       "source": [
         "dict[2013]"
       ],
-      "execution_count": 0,
+      "execution_count": 193,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +197,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 193
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KJnCRqHewiE2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "583cc654-0d20-4d26-9654-6e0dcff4d864"
+      },
+      "source": [
+        "dict.get(2013)"
+      ],
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'D', 2: 'E', 3: 'F'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 194
         }
       ]
     },
@@ -206,7 +236,7 @@
       "metadata": {
         "id": "NqEtfzpaa7T0",
         "colab_type": "code",
-        "outputId": "4da228bf-9f88-4333-b0af-b7c16bdee72c",
+        "outputId": "793560a5-3201-491d-f581-9002d12c37ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -216,7 +246,7 @@
         "for i in dict[2013].items():\n",
         "  print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 195,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +264,7 @@
       "metadata": {
         "id": "LuGV6l5sbU09",
         "colab_type": "code",
-        "outputId": "c625ba82-dfdf-4620-86b7-2a4d3e7d444a",
+        "outputId": "c2ce0a06-fb8b-4534-cdeb-852caf8b1334",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -244,7 +274,7 @@
         "for i in dict[2013].keys():\n",
         "  print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 196,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +292,7 @@
       "metadata": {
         "id": "DVdQh0gNbjnN",
         "colab_type": "code",
-        "outputId": "92fe7756-a007-4a1c-cb12-d8c0102c67ba",
+        "outputId": "cf1f1619-b970-4b34-dabb-684503817196",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -272,7 +302,7 @@
         "for i in dict[2013].values():\n",
         "  print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 197,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +331,7 @@
       "metadata": {
         "id": "OhXPvKxAbliz",
         "colab_type": "code",
-        "outputId": "852afe87-d4ec-4686-e8a8-41c2f13486f4",
+        "outputId": "e4ad406d-5360-4d5c-e963-5d4d0837ae37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -311,7 +341,7 @@
         "for ano in dict.keys():\n",
         "  print(dict[ano][2])"
       ],
-      "execution_count": 0,
+      "execution_count": 198,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +360,7 @@
       "metadata": {
         "id": "PNbm80uqb3cI",
         "colab_type": "code",
-        "outputId": "f1ec4a28-d08a-4d58-da2b-3865bc346a08",
+        "outputId": "ca26f355-adf2-49f3-88dd-2b947d3ad285",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -340,7 +370,7 @@
         "for ano in dict.keys():\n",
         "  print(dict[ano].get(2))"
       ],
-      "execution_count": 0,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +389,7 @@
       "metadata": {
         "id": "513jmhGEc6Py",
         "colab_type": "code",
-        "outputId": "50398be3-757a-4346-d092-00a21b7f7242",
+        "outputId": "253264f1-900c-4673-aa99-6496ac327a6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -369,7 +399,7 @@
         "for ano in dict.keys():\n",
         "  print(dict[ano].get(4))"
       ],
-      "execution_count": 0,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +418,7 @@
       "metadata": {
         "id": "dcuIOeLBc9Ho",
         "colab_type": "code",
-        "outputId": "4fc7e253-e7f7-4862-c866-048098843f7d",
+        "outputId": "c9035e19-7e21-4b44-a3f2-e3bdd7b98201",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -398,7 +428,7 @@
         "for ano in dict.keys():\n",
         "  print(dict[ano].get(4,'Não encontrado'))"
       ],
-      "execution_count": 0,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +447,7 @@
       "metadata": {
         "id": "EIKFXSxCdC6g",
         "colab_type": "code",
-        "outputId": "451e7b3a-7f9a-41b7-a316-1d5de3f5d4da",
+        "outputId": "e61d0cb8-e536-4c57-af25-b0ca00fbc157",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -428,7 +458,7 @@
         "  for i in dict[ano]:\n",
         "    print(dict[ano].get(i))"
       ],
-      "execution_count": 0,
+      "execution_count": 202,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,13 +515,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "945d242f-faa2-4b59-f0c3-8997fa083eb6"
+        "outputId": "dcf061a7-6436-40d0-eba1-02a7400074a2"
       },
       "source": [
         "dict[2014] = {1:'G',2:'H',3:'I'}\n",
         "dict"
       ],
-      "execution_count": 176,
+      "execution_count": 211,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +535,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 176
+          "execution_count": 211
         }
       ]
     },
@@ -518,13 +548,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "d6061d22-73e3-41d0-f27b-30805610e9fe"
+        "outputId": "755637e5-1365-4fe5-91be-aec42ba52b1d"
       },
       "source": [
         "dict[2012][2] = 'B'\n",
         "dict"
       ],
-      "execution_count": 177,
+      "execution_count": 212,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +568,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 177
+          "execution_count": 212
         }
       ]
     },
@@ -551,13 +581,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "3f2a1276-2d27-480f-c459-81a61dbb5b93"
+        "outputId": "080e58d1-19bf-4adc-92e6-84241dec700f"
       },
       "source": [
         "dict[2016] = {1:'M',3:'O'}\n",
         "dict"
       ],
-      "execution_count": 178,
+      "execution_count": 213,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +602,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 178
+          "execution_count": 213
         }
       ]
     },
@@ -585,13 +615,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "cee850c5-f640-497d-d7af-6c05e3cf8471"
+        "outputId": "cb39ecab-13f7-4222-d1c0-156f7d8c5045"
       },
       "source": [
         "dict[2016].pop(1)\n",
         "dict"
       ],
-      "execution_count": 179,
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +636,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 179
+          "execution_count": 214
         }
       ]
     },
@@ -619,13 +649,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "f3b0a4a4-a67b-446c-8f28-62a5f836e7fb"
+        "outputId": "e3276990-1f2e-4b70-d280-fa1c2a7181b4"
       },
       "source": [
         "dict[2016].update({1:'M',2:'N'})\n",
         "dict"
       ],
-      "execution_count": 180,
+      "execution_count": 215,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +670,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 180
+          "execution_count": 215
         }
       ]
     },
@@ -653,13 +683,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "eee6f7e5-3b21-47a5-838e-bbd321b685b3"
+        "outputId": "570f2e5f-60d4-48d2-996b-9a3b4a55dd64"
       },
       "source": [
         "dict.pop(2014)\n",
         "dict"
       ],
-      "execution_count": 181,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +703,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 181
+          "execution_count": 216
         }
       ]
     },
@@ -686,7 +716,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "375e4190-694e-477b-e69d-1b9361c13800"
+        "outputId": "026f62a0-02f9-4030-f82c-ffee7d114fa5"
       },
       "source": [
         "dict2 = {2013: {1:'D', 2:'E', 3:'F'},\n",
@@ -695,7 +725,7 @@
         "dict.update(dict2)\n",
         "dict"
       ],
-      "execution_count": 182,
+      "execution_count": 217,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +741,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 182
+          "execution_count": 217
         }
       ]
     }
