--- a/Notebooks/Pandas_Statistics.ipynb
+++ b/Notebooks/Pandas_Statistics.ipynb
@@ -1649,14 +1649,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 266
         },
-        "outputId": "875d2751-8031-49fb-a08a-91980d42782d"
+        "outputId": "2d25170a-d5fd-45b4-a920-0fb779ac2e9f"
       },
       "source": [
         "# df.groupby(['Department','Position Title'])['Monthly Salary','Daily Salary'].agg(['min','max'])\n",
         "df.pivot_table(index=['Department','Position Title'],values=['Monthly Salary','Daily Salary'],aggfunc=['min','max']).head()\n",
         "# Se não passar \"aggfunc\" por padrão calcula \"mean\""
       ],
-      "execution_count": 212,
+      "execution_count": 219,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1762,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 212
+          "execution_count": 219
         }
       ]
     },
@@ -1775,13 +1775,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 298
         },
-        "outputId": "5a7adf4f-a1e9-481d-c10d-c5d47f33eec0"
+        "outputId": "28c717b0-d2d4-4b80-c0f6-5d51cf602947"
       },
       "source": [
-        "# Tabulação completa\n",
+        "# Passando \"Department\" para as colunas\n",
         "df.pivot_table(index='Position Title', values='Monthly Salary', columns='Department', aggfunc='max').head(2)"
       ],
-      "execution_count": 215,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1973,7 +1973,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 215
+          "execution_count": 220
         }
       ]
     },
